<resources>
    <string name="app_name">DonaTracker</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="email_hint">Type email</string>
    <string name="password_hint">Type password</string>

    <!-- Strings related to registration -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="registration_email">EMAIL</string>
    <string name="registration_password">PASSWORD</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log out</string>
    <string name="account_type">ACCOUNT TYPE</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>

    <!-- Strings related to home page -->
    <string name="locations">Locations</string>
    <string name="welcome">Welcome!</string>

    <!-- Strings related to Location views -->
    <string name="website">Website:\u0020</string>
    <string name="state">State:\u0020</string>
    <string name="zip_code">Zip Code:\u0020</string>
    <string name="location_type">Location Type:\u0020</string>
    <string name="location_name">Location Name:\u0020</string>
    <string name="longitude">Longitude:\u0020</string>
    <string name="latitude">Latitude:\u0020</string>
    <string name="address">Address:\u0020</string>
    <string name="phone">Phone:\u0020</string>
    <string name="city">City:\u0020</string>
    <string name="title_activity_location_maps">Map</string>
</resources>
